--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,7 @@
 /*  your css code here. If applicable */
+ #timer {
+            font-size: 24px;
+            color: #333;
+            text-align: center;
+            margin-top: 20%;
+        }
